# imd-srv

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/dictionary/: dictionary.cpp  dictionary.hpp
src/net/: connection.cpp  connection.hpp  server.cpp  server.hpp
srv/: CMakeLists.txt  main.cpp
srv/net/: connection.cpp  connection.hpp  server.cpp  server.hpp
